# vorrat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  release-please-config.json  repository.yaml
.github/workflows/: ci.yml  release-please.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09c5be3b725e_initial.py  1bfb072b3f46_add_product_barcode_table.py  24abb35ef0bf_drop_product_brand_column.py  25f48b0b85f0_add_consumption_log_table.py  356f3a01fbd5_add_does_not_spoil_and_expiring_soon_.py  4cd665553998_add_product_low_stock_threshold.py  75047f65b399_add_undo_snapshot_to_consumption_log.py  7fe0e9f090c1_add_product_target_stock_level.py  a262b135cd96_merge_barcode_shopping_list_category_.py  bec0c004befd_add_quantity_unit_to_consumption_log.py  c1969f63762b_add_category_id_to_shopping_list_items.py  c92c18306a9a_category_as_a_real_entity.py  f2f4ae42db44_add_opened_at_and_default_open_shelf_.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py  off_client.py  schemas.py  utils.py
backend/app/routers/: backup.py  barcode.py  categories.py  consumption_log.py  locations.py  products.py  settings.py  shopping_list.py  stats.py  stock.py
backend/scripts/: check_image_deps.py  smoke_test.sh
backend/tests/: test_backup.py  test_consumption_log.py  test_products.py  test_stock.py  test_utils.py
docs/: csv-format.md  off-client-development.md
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/scripts/: check_arb_completeness.py
vorrat/: DOCS.md  Dockerfile  config.yaml
(+63 files in other folders)
